[gd_scene load_steps=2 format=3 uid="uid://notification_system"]

[ext_resource type="Script" path="res://game/features/ui/notification_system.gd" id="1_notification_script"]

[node name="NotificationSystem" type="CanvasLayer"]
script = ExtResource("1_notification_script")
layer = 1000

[node name="NotificationContainer" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 400.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="NotificationTemplate" type="Panel" parent="."]
layout_mode = 2
modulate = Color(1, 1, 1, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(32, 32)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Quest Update"
theme_override_font_sizes/font_size = 16

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Quest completed!"
autowrap_mode = 3
